# hipchapedia

.github/workflows/: backend-check.yml  backend-docker.yml  fetcher-check.yml  fetcher-docker.yml  frontend-docker.yml
backend/: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  build.gradle.kts  docker-compose.dev.yml  gradle.properties  settings.gradle.kts
fetcher/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
fetcher/src/: config.py  main.py
fetcher/src/domain/entities/: search_request.py  song.py
fetcher/src/domain/repositories/: lyrics_repository.py  message_repository.py
fetcher/src/infrastructure/messaging/: redis_message_repository.py
fetcher/src/presentation/: lyrics_fetcher_service.py
fetcher/src/use_cases/: search_lyrics.py
fetcher/tests/: conftest.py
fetcher/tests/integration/: test_redis_message_repository.py
fetcher/tests/unit/: test_entities.py  test_lyrics_fetcher_service.py  test_search_lyrics_use_case.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/analyze/: page.tsx
frontend/app/gallery/: page.tsx
frontend/core/entities/: Lyrics.ts
frontend/core/interfaces/: ILyricsRepository.ts
frontend/core/usecases/: AnalyzeLyricsUseCase.ts  SearchLyricsUseCase.ts
frontend/infrastructure/api/: LyricsApiRepository.ts
frontend/presentation/components/: AnalysisCard.tsx  AnalysisResult.tsx  Footer.tsx  Header.tsx  (+6 more)
(+63 files in other folders)
