[project]
name = "fetcher"
version = "0.1.0"
description = "Lyrics fetcher service with Redis pub/sub and Clean Architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.5",
    "aiosignal==1.3.1",
    "attrs==23.2.0",
    "beautifulsoup4==4.12.3",
    "frozenlist==1.4.1",
    "idna==3.7",
    "lyricsgenius>=3.7.5",
    "multidict==6.0.5",
    "musicxmatch-api>=1.0.7",
    "redis>=5.0.0",
    "soupsieve==2.6",
    "yarl==1.9.4",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.14.10",
]
